; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_onefile.c_fs_register.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_onefile.c_fs_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_4__, %struct.TYPE_5__* }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32 }

@fs_vfs = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@SQLITE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fs_register() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.TYPE_5__*, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @fs_vfs, i32 0, i32 1), align 8
  %3 = icmp ne %struct.TYPE_5__* %2, null
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i32, i32* @SQLITE_OK, align 4
  store i32 %5, i32* %1, align 4
  br label %13

6:                                                ; preds = %0
  %7 = call %struct.TYPE_5__* @sqlite3_vfs_find(i32 0)
  store %struct.TYPE_5__* %7, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @fs_vfs, i32 0, i32 1), align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @fs_vfs, i32 0, i32 1), align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @fs_vfs, i32 0, i32 0, i32 1), align 4
  %11 = call i32 @MAX(i32 4, i32 4)
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @fs_vfs, i32 0, i32 0, i32 0), align 8
  %12 = call i32 @sqlite3_vfs_register(%struct.TYPE_4__* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @fs_vfs, i32 0, i32 0), i32 0)
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %6, %4
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local %struct.TYPE_5__* @sqlite3_vfs_find(i32) #1

declare dso_local i32 @MAX(i32, i32) #1

declare dso_local i32 @sqlite3_vfs_register(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
